# signpost

./: .gitignore  BASELINES.md  CITATIONS.bib  DATASETS.md  GAPS_IMPLEMENTED.md  METHOD_MAP.md  Makefile  REACT_PORT_RUNBOOK.md  README.md  h200_e4b_offline_scaling.py  pyproject.toml  requirements.txt
conf/: llm_factories.json  service_conf.example.yaml
docker/: docker-compose.yml
docs/: baseline_harness.zh.md  environment_setup.md  environment_setup.zh.md  experiment_metrics_guide.zh.md  experiment_metrics_plain_guide.zh.md  h200_experiment_workflow.zh.md  h200_local_signpost_migration.zh.md  h200_model_service_restart_runbook.zh.md  h200_remaining_datasets_tmux_runbook.zh.md  h200_v2_runbook_20260527.zh.md  legal_lite_subset_design.zh.md  method_ablation_metric_audit_20260527.zh.md  prompt_control_and_rerun_plan_20260526.zh.md  refactor_function_plan.zh.md  refactor_function_plan_current.zh.md  refactor_implementation_notes.zh.md  refactor_questions_guide.zh.md  signpost_formal_experiment_pipeline.zh.md  signpost_full_v1_safe_experiment_runbook.zh.md  v2_remediation_plan_20260527.zh.md  v8_exact_experiment_plan.zh.md  v8_experiment_runbook.zh.md
scripts/: __init__.py  build_agriculture_all_and_score.py  build_all_and_score.py  build_silver_evidence.py  build_suffer_samples.py  h200_final_eval_v2.py  h200_target_unit_silver_eval.py  h200_target_unit_silver_eval_v2.py  prepare_datasets.py  run_signpost_ablation_suite.sh  run_signpost_ablation_suite_variant.sh  run_signpost_dataset_pipeline.sh  run_signpost_method.sh  run_signpost_method_variant.sh  (+1 more)
(+226 files in other folders)
