[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signpost-re"
version = "0.1.0"
description = "Research-oriented Signpost implementation for GraphRAG experiments"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["signpost*"]
